<resources>
    <string name="app_name">Lifeline</string>
    <string name="title_recipients">People</string>
    <string name="title_home">Home</string>
    <string name="title_lifeline">Lifeline</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_forgotpw">Forgot your password?</string>
    <string name="title_email_sent">Please check your Email</string>
    <string name="title_updatepw">Change password</string>
    <string name="title_about">About Us</string>
    <string name="title_funds">How our services are funded?</string>
    <string name="title_feed">Feed</string>
    <string name="contentdesc_facebook">Facebook</string>
    <string name="contentdesc_twitter">Twitter</string>
    <string name="contentdesc_lifeline">Lifeline</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password 6+ characters</string>
    <string name="hint_password_2">Password</string>
    <string name="hint_subject">What do you want to resolve?</string>
    <string name="hint_address">Donation Address</string>
    <string name="hint_description">Description</string>
    <string name="hint_specify">Food, Medicine, Clothes etc.</string>
    <string name="hint_needs">Needs</string>
    <string name="hint_quantity">How many do you need?</string>
    <string name="btn_share">Share</string>
    <string name="btn_next">Next</string>
    <string name="title_donation_details">Donation details</string>
    <string name="info_donation_category">Please specify your donation</string>
    <string name="info_steps">Step 1 of 2</string>
    <string name="info_location">Donations will be sent to:</string>
    <string name="legal_privacy_policy_terms_title">Terms of Use</string>
    <string name="legal_privacy_policy_terms_p1">Lifeline builds technologies and services to provide and enable donors to contribute with each other and
    to community. This platform is provided to you by Lifeline </string>
    <string name="legal_privacy_policy_terms_p2">Consent: By accessing and/or using our App, you agree to these Terms of Use(Terms). Please read these Terms
    carefully and immediately cease using our app if you do not agree to them.</string>
    <string name="legal_privacy_policy_variations_title">Variations</string>
    <string name="legal_privacy_policy_variations_body">We may make changes to the Agreements for valid reasons, such as improving the existing functions or features
    or adding new functions or features to the Service. When we make material changes to the Agreements, we will  provide you with notice by displaying a prominent
    notice or seeking your agreement within the Service or by sending you an email. We will notify you in advance and your continued use of the service after
    the changes have been made will constitute your acceptance of the changes. If you do not wish to continue using the Service under the new versoin of agreements,
    you may terminate your account by contacting us.</string>
    <string name="legal_privacy_policy_licensetouse_title">License to use our App</string>
    <string name="legal_privacy_policy_licensetouse_p1">We grant you a non-exclusive, royalty-free, revocable, worldwide, non-transferable license to use our
    site in accordance with these Terms. All other uses are prohibited without our prior written consent.</string>
    <string name="legal_privacy_policy_licensetouse_p2">Prohibited Conduct: You must not do or attempt to do anything that is unlawful; prohibited by any laws
    applicable to our App; which we would consider inappropriate; or which might bring us or our App into dispute, including(without limitation):</string>
    <string name="legal_privacy_policy_item1">Anything that would constitute a breach of an individuals privacy(including uploading private or personal information
        without and individuals consent) or any other legal rights</string>
    <string name="legal_privacy_policy_item2">Using our App to defame, harass, threaten, menace or offend any person.</string>
    <string name="legal_privacy_policy_item3">Interfering with any user using our App</string>
    <string name="legal_privacy_policy_item4">Tampering with or modifying our App, knowingly transmitting viruses or other disabling features, or damaging
    or interfering with out App, including(without limitation) using Trojan Horses, viruses or piracy or programming routines that may damage of interfere with our App.</string>
    <string name="legal_privacy_policy_item5">Using our App to send unsolicited email messages</string>
    <string name="legal_privacy_policy_item6">Facilitating or assisting a third party to do any above acts.</string>
    <string name="legal_privacy_policy_intellectualproperty">Intellectual Property Rights: Unless otherwise indicated, we own our license all rights, title, and interest
    (including intellectual property rights) in our App and all of the content. Your use of our App and your use of and access to any content does not grant of transfer to you
    any rights, title or interest in relation to our App or the content. You must not:</string>
    <string name="legal_privacy_policy_item7">Copy or use, in whole or in part, any Content</string>
    <string name="legal_privacy_policy_item8">Reproduce, retransmit, distribute, disseminate, sell, publish, broadcast or circulate any Content to any third party</string>
    <string name="legal_privacy_policy_item9">Breach any intellectual property rights connected with our App or the Content, including(without limitation) altering or modifying
    any of the Content, causing any of the Content to be framed or embedded in another website or platform, or creating derivative works from the Content.</string>
    <string name="legal_terms_usercontent">User Content: You may be permitted to post, upload, publish, submit or transmit relevant information and content(User content) on our App
    By making available any User Content on or through our App, You grant to us a worldwide, irrevocable, perpetual, non-exclusive, transferable, royalty-free license to use the User Content,
    with the right to use, view, copy, adapt, modify, distribute, license, transfer, communicate, publicly display, publicly perform, transmit, stream, broadcast, access, or otherwise
    exploit such User Content on, through by means of our App. \n \n You agree that you are solely responsible for all User Content that you make available on or through our
    App. You represent and warrant that:</string>
    <string name="legal_terms_item1">You are either the sole and exclusive owner of all User Content of you have all rights, licenses, consents and releases that are necessary to grant to us the rights
    in such User Content(as contemplated by these Terms)</string>
    <string name="legal_terms_item2">Neither the User Content nor the posting, uploading, publication, submission or transmission of the User Content or our use of the User Content on, through or by means
    of our App will infringe, misappropriate or violate a third parties intellectual property rights, or rights of publicity or privacy, or result in the violation of any applicable law or regulation</string>
    <string name="legal_privacy_policy_usercontent">We do not endorse or approve, and are not responsible for, any User Content. We may, at any time(at our sole discretion),
    remove any User Content</string>
    <string name="legal_privacy_policy_usercontent_item1">Third Party sites: Our app may contain links to websites operated by third parties. Unless expressly
    stated otherwise, we do not control ,endorse or approve, and are not responsible for, the content on those websites. You should make your own investigations with respect to
    the suitability of those websites.</string>
    <string name="legal_privacy_policy_usercontent_item2">Discontinuance: We may, at any time and without notice to you, discontinue our App, in whole or in part.
    We may exclude any person from using our App, at any time and at our sole discretion. WE are not responsible for any liability you may suffer arising from or in connection
    with any such discontinuance or exclusion.</string>
    <string name="legal_privacy_policy_usercontent_item3">Limitation of Liability: To the maximum extent permitted by law, we are not responsible for any loss,
    damage or expense, howsoever arising, whether direct or indirect and/or whether present, unascertained, future or contingent(Liability) suffered by you or any
    third party, arising from or in connection with your use of our Site and/or the Content and/or any inaccessibility of, interruption to or outage of our Site
    and/or any loss or corruption of data and/or the fact that the Content is incorrect, incomplete or out-of-date.</string>
    <string name="legal_privacy_policy_usercontent_item4">Disputes: In the event of any disputes arising from, or in connection with, these Terms(Dispute), the
    party claiming there is a Dispute must give written notice to the other party setting our the details of the dispute and proposing resolution. Within 7 days
    after receiving the notice, the parties must, by their senior executives or senior managers(who have the authority to reach a resolution on behalf of the party),
    meet at least once to attempt to resolve the dispute or agree on the method of resolving the dispute by other means, in good faith. All aspects of every such
    conference, except the fact of the occurrence of the conference, will be privileged. If the parties do not resolve the Dispute, or (if the Dispute is not resolved)
    agree on an alternate method to resolve the Dispute, within 21 days after receipt of the notice, The Dispute may be referred by either party(by notice in writing to the
        other party) to litigation.</string>
    <string name="legal_privacy_policy_usercontent_item5">Jurisdiction: Your use of our App and these Terms are governed by the laws of Philippines. You
    irrevocably and unconditionally submit to the exclusive jurisdiction of the courts operating in Philippines and any courts entitled to hear
    appeals from those courts and waive any right to object to proceedings being brought in those courts. \n \n Our app may be accessed throughout Philippines and overseas.
    We make no representation that our App complies with the laws(including Intellectual Property Laws) of any country outside Philippines. If you access our App from
    outside Philippines, you do so at your own risk and are responsible for complying with the laws of the jurisdiction where you access our App.</string>
    <string name="help_status_title">What does Open and Closed status mean?</string>
    <string name="help_status_body">When the status is marked as Open, The campaign organizer or post author means he/she is still open for donations.
    When it is closed there will be no more donations to be received any further.</string>
    <string name="help_campaign_limits_title">Campaign Limits</string>
    <string name="help_campaign_limits_body">User can only post 3 issues or campaign when this limit has been reached a User will be restricted to post more campaign or issues.</string>
    <string name="help_campaign_contribute_title">Why the contribute button is not showing?</string>
    <string name="help_campaign_contribute_body">There are two reasons why the contribute button is not showing up. One, If the target quantity has been reached the post will automatically close
    itself which means donors wont be able to donate anymore to the campaign or issue. Two, When the campaign organizer or post author decided to close the post.</string>
    <string name="help_close_post_title">How can I close my post?</string>
</resources>