<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_terms_title" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_terms_p1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_terms_p2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_variations_title" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_variations_body" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_licensetouse_title" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_licensetouse_p1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_licensetouse_p2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item3" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item4" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item5" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item6" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_intellectualproperty" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item7" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item8" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_privacy_policy_item9" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_terms_usercontent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_terms_item1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/legal_terms_item2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_usercontent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_usercontent_item1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_usercontent_item2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_usercontent_item3" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_usercontent_item4" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/legal_privacy_policy_usercontent_item5" />




    </LinearLayout>

</ScrollView>