<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_fragment_request_btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="end"
                android:text="@string/btn_share"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"
                />



        <EditText
            android:id="@+id/main_fragment_request_input_data_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:focusable="true"
            android:hint="@string/hint_subject"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/main_fragment_request_input_data_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@android:color/transparent"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:fontFamily="@font/montserrat_light"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/main_fragment_request_input_data_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:focusable="true"
            android:hint="@string/hint_address"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/montserrat_light"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/main_fragment_request_input_needs"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_needs"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_light"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/main_fragment_request_input_quantity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_quantity"
            android:inputType="number"
            android:maxLines="1"
            android:fontFamily="@font/montserrat_light"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/info_location"/>

        <Spinner
            android:id="@+id/main_fragment_request_data_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            />


    </LinearLayout>

</ScrollView>